commented out the promo block

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       </div>
     </section>
 
-    <section class="sales">
+<!--     <section class="sales">
       <div class="container">
 
         <p class="sales__title">Акции HENDERSON</p>
@@ -280,7 +280,7 @@
         </ul>
 
       </div>
-    </section>
+    </section> -->
 
   </main>
 
